config, libs added

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 server.port=8888
 spring.cloud.config.server.git.uri=https://github.com/rhyme884/spring-cloud-configserver.git
+spring.cloud.config.server.bootstrap=true
 management.security.enabled=false
 management.endpoint.env.enabled=true
